--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   <header class="site-header">
   <div class="header-overlay">
     <nav class="nav-links">
-      <a href="file:///C:/Users/farha/OneDrive/Desktop/bourbon/roadmap.html">ROADMAP</a>
-      <a href="file:///C:/Users/farha/OneDrive/Desktop/bourbon/index.html">GET FREE TOKEN</a>
-      <a href="https://x.com/bourboncoinX"> FOLLOW US ON <i class="fa-brands fa-x-twitter"></i></a>
+      <a href="roadmap.html">ROADMAP</a>
+      <a href="index.html">GET FREE TOKEN</a>
+      <a href="https://x.com/bourboncoinX" target="_blank">Google</a>
+> FOLLOW US ON <i class="fa-brands fa-x-twitter"></i></a>
 </nav>
     </div>
   </div>
