--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <nav class="nav-links">
       <a href="roadmap.html">ROADMAP</a>
       <a href="index.html">GET FREE TOKEN</a>
-      <a href="https://x.com/bourboncoinX" target="_blank">Google</a>
-> FOLLOW US ON <i class="fa-brands fa-x-twitter"></i></a>
+      <a href="https://x.com/bourboncoinX" target="_blank">FOLLOW US ON <i class="fa-brands fa-x-twitter"></i></a>
 </nav>
     </div>
   </div>
