--- a/roadmap.html
+++ b/roadmap.html
@@ -5,17 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BourbonCoin Roadmap</title>
   <link rel="stylesheet" href="roadmap.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <div id="header-placeholder"></div>
 
-  <script>
-    fetch("header.html")
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("header-placeholder").innerHTML = data;
-      });
-  </script>
+  <header class="site-header">
+  <div class="header-overlay">
+    <nav class="nav-links">
+      <a href="roadmap.html">ROADMAP</a>
+      <a href="index.html">GET FREE TOKEN</a>
+      <a href="https://x.com/bourboncoinX" target="_blank">FOLLOW US ON <i class="fa-brands fa-x-twitter"></i></a>
+</nav>
+    </div>
+  </div>
+</header>
   <div class="container">
     <div class="timeline">
       <div class="year">2024</div>
