--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="slider-container">
           <div class="slider" id="slider">
             <div class="slide yellow">
-             <img src="./assets/Bourby1.png" alt="NFT wizard" class="card-image">
+             <img src="./assets/Bourby1.png" alt="" class="card-image">
             </div>
             <div class="slide purple">
-              <img src="./assets/BourbonCoin.png" alt="NFT wizard" class="card-image">
+              <img src="./assets/BourbonCoin.png" alt="" class="card-image">
             </div>
           </div>
       </section>
