--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="slider-container">
           <div class="slider" id="slider">
             <div class="slide yellow">
-             <img src="./assets/Bourby1.png" alt="" class="card-image">
+             <img src="./assets/Bourby1.PNG" alt="" class="card-image">
             </div>
             <div class="slide purple">
               <img src="./assets/BourbonCoin.png" alt="" class="card-image">
